modules/webserver/apache/securitygroup.tf
#web-securitygroup
resource "aws_security_group" "web_sg" {
  name        = "websg"
  description = "controls access to the LB"
  vpc_id      = aws_vpc.lamp_vpc.id
  
  tags = {
      Name = "websg"
    }
}


resource "aws_security_group_rule" "lb_to_web" {
  
  type                     = "ingress"
  from_port                = 80
  to_port                  = 80
  protocol                 = "tcp"
  source_security_group_id = aws_security_group.lb_sg.id
  security_group_id        = aws_security_group.web_sg.id
}



resource "aws_security_group_rule" "debuglaptop" {
  
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["${var.personal_laptop_ip}/32"]
  security_group_id = aws_security_group.websg.id
}

resource "aws_security_group_rule" "ssh" {
  
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["${var.personal_laptop_ip}/32"]
  security_group_id = aws_security_group.websg.id

}

#Internet Control Message Protocol (ICMP, Protocole de message de contrôle sur Internet)

resource "aws_security_group_rule" "icmp" {
  security_group_id = aws_security_group.websg.id
  type              = "ingress"
  from_port         = 0
  to_port           = 0
  protocol          = "icmp"
  cidr_blocks       = ["${var.personal_laptop_ip}/32"]

}



resource "aws_security_group_rule" "web_egress" {
  security_group_id = aws_security_group.websg.id
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
}
